[package]
name = "cnomen"
description = "A command line tool for naming colors."
version = "0.1.0"
edition = "2021"
authors = ["Scott Johnson <jaywir3@gmail.com>"]

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
copypasta = "0.10.1"
hex = "0.4.3"
minreq = "2.12.0"
regex = "1.10.6"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.122"

[[bin]]
name = "cnomen"
